[package]
name = "pso_ir_generator"
version = "1.0.0"
edition = "2021"
authors = ["Goto Kenta <gotoukenta62@gmail.com>"]
description = "Impulse Response Generator: PSO Algorithm"
license = "MIT"

[dependencies]
rand = "0.9.2"
hound = "3.5" # For Read and Write Wav Files
eframe = "0.33.2" # For GUI
rfd = "0.15.4" # For File Dialogs